--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <script src="./script.js"></script>
 </head>
 <body>
+  <br> Escolha a camada a ser mostrada : <span id="layer_list"> 
+    <input type='checkbox' class='list_item' id='PopCheckbox' />População
+    <input type='checkbox' class='list_item' id='IDHMCheckbox' />IDHM
+    <input type='checkbox' class='list_item' id='PIBCheckbox' />PIB
+  </span></br>
   <div id="viewDiv"></div>
 </body>
 </html>
